Fixed switchLine alignment #580

--- a/app/source/css/utils/switchLine.styl
+++ b/app/source/css/utils/switchLine.styl
@@ -14,5 +14,11 @@
     .switchLine-switch {
         display: table-cell;
         white-space: nowrap;
+        > label {
+            vertical-align: middle;
+        }
+        > switch-checkbox {
+            vertical-align: bottom;
+        }
     }
 }
